force-app/main/default/objects/b3p__Push_Message__c/b3p__Push_Message__c.object-meta.xml
<CustomObject>
    <label>Push Message</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Push Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>