force-app/main/default/objects/b3p__Push_Message__c/fields/b3p__Body__c.field-meta.xml
<CustomField>
    <fullName>b3p__Body__c</fullName>
    <label>Body</label>
    <type>TextArea</type>
</CustomField>