force-app/main/default/objects/b3p__Push_Message__c/fields/b3p__Contact__c.field-meta.xml
<CustomField>
    <fullName>b3p__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Push Messages</relationshipLabel>
    <relationshipName>Push_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>