force-app/main/default/objects/b3p__Push_Message__c/fields/b3p__Push_Registration__c.field-meta.xml
<CustomField>
    <fullName>b3p__Push_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Push Registration</label>
    <referenceTo>b3p__Web_Event__c</referenceTo>
    <relationshipLabel>Push Messages</relationshipLabel>
    <relationshipName>Push_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>