force-app/main/default/objects/b3p__Push_Message__c/fields/b3p__Status__c.field-meta.xml
<CustomField>
    <fullName>b3p__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>NotRegistered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>